--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/hompage.css" />
 
     <script src='https://www.google.com/recaptcha/api.js?onload=myCallBack&render=explicit' async defer></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="~/Scripts/User/GoogleCaptcha.js" defer></script>
     <script type="application/ld+json">
         {
@@ -425,6 +426,8 @@
                     vidDefer[i].setAttribute("src", video);
                 }
             });
+
+            
         });
     </script>
 </body>
