--- a/Sparkt.WebApp/Views/work/StarVYNG.cshtml
+++ b/Sparkt.WebApp/Views/work/StarVYNG.cshtml
@@ -17,8 +17,8 @@
     "name": "VYNG Video",
     "VideoList": [{
     "@@type":
-    "@@id": "https://youtu.be/yA0XUhbNhbs",
-    "url":"https://youtu.be/yA0XUhbNhbs",
+    "@@id": "https://youtu.be/eyH-Usj6O80",
+    "url":"https://youtu.be/eyH-Usj6O80",
     "description": "Enable linking characters on Star Plus with real-world relationships in a way never done before",
     "duration": "1M56S",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/vyng-cover.jpg",
@@ -32,7 +32,7 @@
             <div class="banner-source">
                 <div class="banner-video">
                     <video class="bannerplayer" poster="~/Content/work/images/banners/vyng-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                        <source type="video/youtube" src="https://youtu.be/yA0XUhbNhbs" />
+                        <source type="video/youtube" src="https://youtu.be/eyH-Usj6O80" />
                     </video>
                 </div>
                 <div class="banner-image" style="background-image: url(../Content/work/images/banners/vyng-cover.jpg);"> </div>
