--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/common.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/hompage.css" />
-
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/lity.min.css" />
     <script src='https://www.google.com/recaptcha/api.js?onload=myCallBack&render=explicit' async defer></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="~/Scripts/User/GoogleCaptcha.js" defer></script>
@@ -377,6 +377,7 @@
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/animation.gsap.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/debug.addIndicators.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/swiper-4.2.6/js/swiper.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/lity.min.js"></script>
     <script type="text/javascript" src="~/Content/js/functions.js" defer></script>
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
     <script src="~/Scripts/User/SparktHelper.js" defer></script>
