--- a/Sparkt.WebApp/Areas/Admin/Views/Login/Login.cshtml
+++ b/Sparkt.WebApp/Areas/Admin/Views/Login/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Optimization;
 @model Sparkt.WebApp.Areas.Admin.Models.LoginViewModel
 @{
-    ViewBag.Title = "SparkT Admin-Login";
+    ViewBag.Title = "Sparkt Admin-Login";
     Layout = null;
 }
 
