--- a/Sparkt.WebApp/Areas/Admin/Views/Shared/_LeadDownload.cshtml
+++ b/Sparkt.WebApp/Areas/Admin/Views/Shared/_LeadDownload.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="leadDownload" class="modal uplayer-register player-popup signup-popup">
+﻿<div id="leadDownload" style="height:100%" class="modal uplayer-register player-popup signup-popup">
     <div class="row">
         <div class="col m6">
             <h5 class="">Download Leads </h5>
