--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1897,7 +1897,7 @@
                                     </div>
                                     <div class="input-field col s12 m12 l8">
                                         <select id="drpConsultationType">
-                                            <option value="" disabled selected>Seek a consultation</option>
+                                            <option value="" disabled selected>Select a Category</option>
                                             <option value="1">Join Sparkt</option>
                                             <option value="2">Work with us</option>
                                             <option value="3">Partner with us</option>
