--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -43,8 +43,18 @@
                 <h1>NACH BALIYE 8</h1>
                 <div class="clear"></div>
                 <span>Bringing alive the 'Romance-wala Dance'</span>
-            </div>         
+            </div>
         </div>
+
+        <div class="awards-wrap">
+            <ul>
+            
+                <li class="tooltip" title="MOBEXX: - Excellence in use of Video - Gold"><img src="~/Content/work/images/awards/mobexx-gold.png" class="responsive-img" alt="" /></li>
+                
+
+            </ul>
+        </div>
+
         @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
