--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -49,7 +49,7 @@
                 <li class="tooltip" title="ABBYS MEDIA: Best use of Digital as a Medium - Silver"><img src="~/Content/work/images/awards/abbys-silver.png" class="responsive-img" alt="" /></li>
                 <li class="tooltip" title="ACEF: Effectiveness - Gold"><img src="~/Content/work/images/awards/acef-gold.png" class="responsive-img" alt="" /></li>
                 <li class="tooltip" title="ACEF: Innovation - Silver"><img src="~/Content/work/images/awards/acef-silver.png" class="responsive-img" alt="" /></li>
-                <li class="tooltip small-awards" title="mCube: Best Digital Integrated Marketing - Gold"><img src="~/Content/work/images/awards/mCube-gold.png" class="responsive-img" alt="" /></li>
+                <li class="tooltip small-awards" title="mCube: Best Viral Marketing Campaign - Gold"><img src="~/Content/work/images/awards/mCube-gold.png" class="responsive-img" alt="" /></li>
                 <li class="tooltip" title="CAMPAIGN INDIA: Integrated - Gold"><img src="~/Content/work/images/awards/campaign-india-gold.png" class="responsive-img" alt="" /></li>
                 <li class="tooltip" title="CAMPAIGN INDIA: Online Marketing - Grand Prix"><img src="~/Content/work/images/awards/campaign-india-bronz.png" class="responsive-img" alt="" /></li>
                 <li class="tooltip" title="ICMA: Best Marketed Branded Content - Gold"><img src="~/Content/work/images/awards/icma-gold.png" class="responsive-img" alt="" /></li>
