--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -44,7 +44,7 @@
             <ul>
                 <li class="tooltip" title="DIGIXX: Best Use of Video - Gold"><img src="~/Content/work/images/awards/digx-gold.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="ACEF: CSR - Gold"><img src="~/Content/work/images/awards/acef-gold.png" class="responsive-img" alt="" /> </li>
-                <li class="tooltip" title="CAMPAIGN INDIA: Social Cause - Supported by Brand - Bronze"><img src="~/Content/work/images/awards/campaign-india-bronz.png" class="responsive-img" alt="" /></li>
+                <li class="tooltip" title="CAMPAIGN INDIA: Online Marketing - Gold"><img src="~/Content/work/images/awards/campaign-india-gold.png" class="responsive-img" alt="" /></li>
             </ul>
         </div>
         @Html.Partial("_WorkMenu")
