Awards UI Changes

--- a/Sparkt.WebApp/Views/work/Ted.cshtml
+++ b/Sparkt.WebApp/Views/work/Ted.cshtml
@@ -51,6 +51,8 @@
                 <li class="tooltip" title="CIDCA: Integrated - Gold"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="CIDCA: Media Innovation - Silver"><img src="~/Content/work/images/awards/cidca-2018-silver.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip small-awards" title="mCube: Best Social Media Marketing Campaign Overall - Gold"><img src="~/Content/work/images/awards/mCube-gold.png" class="responsive-img" alt="" /></li>
+                <li class="tooltip" title="IDMA: Best Use of Social Networks - Silver"><img src="~/Content/work/images/awards/idma-silver-2018.png" class="responsive-img" alt="" /> </li>
+                <li class="tooltip" title="IDMA: Best Integrated Media Campaign - Silver"><img src="~/Content/work/images/awards/idma-silver-2018.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
         @Html.Partial("_WorkMenu")
