--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -48,6 +48,7 @@
             <ul>
                 <li class="tooltip" title="ABBYS: 18.B Youth Marketing - Silver"><img src="~/Content/work/images/awards/abbys-silver.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip small-awards" title="mCube: Best Engagement in Social Media Campaign - Gold"><img src="~/Content/work/images/awards/mCube-gold.png" class="responsive-img" alt="" /></li>
+                <li class="tooltip" title="IDMA: Most Effective Social Listening - Bronze"><img src="~/Content/work/images/awards/idma-bronze-2018.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
         @Html.Partial("_WorkMenu")
