Added New Business category

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1902,6 +1902,7 @@
                                             <option value="2">Work with us</option>
                                             <option value="3">Partner with us</option>
                                             <option value="4">Media Inquiries</option>
+                                            <option value="6">New Business</option>
                                             <option value="5">Everything Else</option>
                                         </select>
 
