UI Link Changes

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1803,12 +1803,12 @@
                         <div class="targetDivinsight">
                             <div class="xms-clients">
                                 <ul>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-mahindra.png" alt=""><span><img src="~/Content/work/images/clients/mahindra.png" alt=""></span></a></li>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-india-rf.png" alt=""><span><img src="~/Content/work/images/clients/india-rf.png" alt=""></span></a></li>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-usports.png" alt=""><span><img src="~/Content/work/images/clients/usports.png" alt=""></span></a></li>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-piramal-capital.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-phfl.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
-                                    <li><a href="#"><img src="~/Content/images/xms-client-brickex.png" alt=""><span><img src="~/Content/work/images/clients/brickex.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("MahindraMFExperience","work")"><img src="~/Content/images/xms-client-mahindra.png" alt=""><span><img src="~/Content/work/images/clients/mahindra.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/xms-client-india-rf.png" alt=""><span><img src="~/Content/work/images/clients/india-rf.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("USports","work")"><img src="~/Content/images/xms-client-usports.png" alt=""><span><img src="~/Content/work/images/clients/usports.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("PiramalCapital","work")"><img src="~/Content/images/xms-client-piramal-capital.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("Phfl","work")"><img src="~/Content/images/xms-client-phfl.png" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
+                                    <li><a href="@Url.Action("brickex","work")"><img src="~/Content/images/xms-client-brickex.png" alt=""><span><img src="~/Content/work/images/clients/brickex.png" alt=""></span></a></li>
                                 </ul>
                             </div>
                         </div>
