--- a/Sparkt.WebApp/Content/css/hompage.css
+++ b/Sparkt.WebApp/Content/css/hompage.css
@@ -3378,6 +3378,9 @@ font-size:0;}
         padding: 24px 0 !important;
     }
 
+input:not([type]).validate + label, input[type=text]:not(.browser-default).validate + label, input[type=password]:not(.browser-default).validate + label, input[type=email]:not(.browser-default).validate + label, input[type=url]:not(.browser-default).validate + label, input[type=time]:not(.browser-default).validate + label, input[type=date]:not(.browser-default).validate + label, input[type=datetime]:not(.browser-default).validate + label, input[type=datetime-local]:not(.browser-default).validate + label, input[type=tel]:not(.browser-default).validate + label, input[type=number]:not(.browser-default).validate + label, input[type=search]:not(.browser-default).validate + label, textarea.materialize-textarea.validate + label {
+    color: #000000 !important
+}
 
 @media screen and (max-width:1920px) {
     .head-title {
