UI Link Changes

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -928,7 +928,7 @@
                         <a href=""><img src="~/Content/images/clients/star-utsav.png" alt="Star Utsav" /></a>
                     </li>
                     <li>
-                            <a style="cursor:default"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
+                            <a  href="@Url.Action("Dubsmash","work")" style="cursor:default"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
                         </li>
 						
 					<li>
@@ -936,7 +936,7 @@
                     </li>	
 						
                     	<li>
-                        <a style="cursor:default" ><img src="~/Content/images/clients/yaarii.png" alt="yaarii" /></a>
+                        <a href="@Url.Action("Yaarii","work")" style="cursor:default" ><img src="~/Content/images/clients/yaarii.png" alt="yaarii" /></a>
                     </li>
 					
 					
@@ -946,7 +946,7 @@
                     </li>
 				
                     <li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
+                        <a href="@Url.Action("Pedderjohnson","work")" style="cursor:default"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
                     </li>
 					
 					<li>
