--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1018,6 +1018,27 @@
                     <div class="resp-tabs-container">
                         <div class="resp-tab-content" id="campaigns">
                             <ul>
+
+                                <li>
+                                    <a href="@Url.Action("kzk","work")">
+                                        <img src="~/Content/work/images/thums/kzk-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kasautii Zindagii Kay</h4>
+                                            <p>Relaunching the legendary show Kasautii Zindagi Kay in a legendary way.</p>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="@Url.Action("kullfimissedcall","work")">
+                                        <img src="~/Content/work/images/thums/kulfi-missed-call-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kulfi Missed Call</h4>
+                                            <p>Reinforcing Kullfi’s bond with the audience through a Missed Call.</p>
+                                        </div>
+                                    </a>
+                                </li>
+
                                 <li>
                                     <a href="@Url.Action("UCypher","work")">
                                         <img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="">
@@ -1117,19 +1138,21 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="@Url.Action("MahindraPragatiYojana","work")">
-                                        <img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Mahindra Pragati Bluechip Yojana</h4>
-                                            <p>Launching a new fund through unconventional content formats.</p>
-                                        </div>
-                                    </a>
-                                </li>
+                                
                             </ul>
                         </div>
                         <div class="resp-tab-content" id="Innovations">
                             <ul>
+                                <li>
+                                    <a href="@Url.Action("KZK-AR","work")">
+                                        <img src="~/Content/work/images/thums/kzk-ar-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kasautii Zindagii Kay AR</h4>
+                                            <p>Recreating the magic of love through Augmented Reality.</p>
+                                        </div>
+                                    </a>
+                                </li>
+
                                 <li>
                                     <a href="@Url.Action("TedGoogleCards","work")">
                                         <img src="~/Content/work/images/thums/ted-google-cards-thum.jpg" alt="">
@@ -1251,6 +1274,36 @@
                         </div>
                         <div class="resp-tab-content" id="Experiences">
                             <ul>
+                                <li>
+                                    <a href="@Url.Action("Sky","work")">
+                                        <img src="~/Content/work/images/thums/sky-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>India Bulls Sky</h4>
+                                            <p>Way way above the rest</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("piramal-capital","work")">
+                                        <img src="~/Content/work/images/thums/piramal-foundation-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Piramal Foundation</h4>
+                                            <p>Showcasing the essence of the foundation.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("yaarii-website","work")">
+                                        <img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Yaarii Website</h4>
+                                            <p>Reingrovating Yaari’s Brand Experience.</p>
+                                        </div>
+                                    </a>
+                                </li>
+
+
+
                                 <li>
                                     <a href="@Url.Action("MahindraMFExperience","work")">
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
@@ -1392,7 +1445,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="@Url.Action("Kulfi","work")">
+                                    <a href="@Url.Action("Kullfi","work")">
                                         <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Kullfi</h4>
