--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -11,32 +11,42 @@
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("MahindraPragatiYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="" /> <span>Mahindra Pragati Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MahindraRuralBharat","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-rural-bharat-thum.jpg" alt="" /> <span>Mahindra Rural Bharat</span> </a> </li>
         </ul>
-        <ul id="starplus" class="horizontalScroll" >
+        <ul id="starplus" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("TedGoogleCards","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-google-cards-thum.jpg" alt="" /> <span>TED GOOGLE CARDS</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("NachBaliye8","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("HSPubh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="" /> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Kullfi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="" /> <span>KULFI</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Khichdi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/khichadi-thum.jpg" alt="" /> <span>KHICHDI</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Vyng","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/vyng-thum.jpg" alt="" /> <span>VYNG</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Tgilc","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tgilc-thums.jpg" alt="" /> <span>TGILC</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("Pow","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("JungleBook","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("Dhoni","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ms-dhoni-thum.jpg" alt="" /> <span>M.S. Dhoni</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("WomensDay","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="" /> <span>Women's Day</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="11"><a href="@Url.Action("MadeByMom","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="" /> <span>Made By Mom</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="12"><a href="@Url.Action("IshqBaaaz","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ishqbaaaz-thum.jpg" alt="" /> <span>Ishqbaaaz</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="13"><a href="@Url.Action("DancePlus2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="" /> <span>Dance+2</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="14"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="15"><a href="@Url.Action("Baaghi2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bhaghi-2-thum.jpg" alt="" /> <span>Baaghi 2</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="16"><a href="@Url.Action("DivyaDrishtiContent","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-content-thum.jpg" alt="" /> <span>Divya Drishti Content</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="17"><a href="@Url.Action("DivyaDrishtiInnovation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-innovation-thum.jpg" alt="" /> <span>Divya Drishti Innovation</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="18"><a href="@Url.Action("KarnSangini","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/karn-sangini-thum.jpg" alt="" /> <span>Karn Sangini</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="19"><a href="@Url.Action("Nazar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nazar-thum.jpg" alt="" /> <span>Nazar</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="20"><a href="@Url.Action("Sanju","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sanju-thum.jpg" alt="" /> <span>Sanju</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="21"><a href="@Url.Action("Stree","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/stree-thum.jpg" alt="" /> <span>Stree</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="22"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevocie-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
+
+
+            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("KZK","work")" class="hvr-grow-shadow"><img src="~/Content/images/thums/kzk-thum.jpg" alt="" /> <span>Kasauti Zindagi ki</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("KZK-AR","work")" class="hvr-grow-shadow"><img src="~/Content/images/thums/kzk-ar-thum.jpg" alt="" /> <span>Kasauti Zindagi ki AR</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("kullfimissedcall","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kulfi-missed-call-thum.jpg" alt="" /> <span>Kulfi Missed Call</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("star-plus-brand-refresh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/start-brand-refresh-thum.jpg" alt="" /> <span>Star Brand Refresh</span> </a> </li>
+
+
+
+
+            <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("TedGoogleCards","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-google-cards-thum.jpg" alt="" /> <span>TED GOOGLE CARDS</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("NachBaliye8","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("HSPubh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="" /> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="11"><a href="@Url.Action("Kullfi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="" /> <span>KULFI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="12"><a href="@Url.Action("Khichdi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/khichadi-thum.jpg" alt="" /> <span>KHICHDI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="13"><a href="@Url.Action("Vyng","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/vyng-thum.jpg" alt="" /> <span>VYNG</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="14"><a href="@Url.Action("Tgilc","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tgilc-thums.jpg" alt="" /> <span>TGILC</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="15"><a href="@Url.Action("Pow","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="16"><a href="@Url.Action("JungleBook","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="17"><a href="@Url.Action("Dhoni","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ms-dhoni-thum.jpg" alt="" /> <span>M.S. Dhoni</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="18"><a href="@Url.Action("WomensDay","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="" /> <span>Women's Day</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="19"><a href="@Url.Action("MadeByMom","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="" /> <span>Made By Mom</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="20"><a href="@Url.Action("IshqBaaaz","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ishqbaaaz-thum.jpg" alt="" /> <span>Ishqbaaaz</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="21"><a href="@Url.Action("DancePlus2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="" /> <span>Dance+2</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="22"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="23"><a href="@Url.Action("Baaghi2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bhaghi-2-thum.jpg" alt="" /> <span>Baaghi 2</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="24"><a href="@Url.Action("DivyaDrishtiContent","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-content-thum.jpg" alt="" /> <span>Divya Drishti Content</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="25"><a href="@Url.Action("DivyaDrishtiInnovation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/divya-drishti-innovation-thum.jpg" alt="" /> <span>Divya Drishti Innovation</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="26"><a href="@Url.Action("KarnSangini","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/karn-sangini-thum.jpg" alt="" /> <span>Karn Sangini</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="27"><a href="@Url.Action("Nazar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nazar-thum.jpg" alt="" /> <span>Nazar</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="28"><a href="@Url.Action("Sanju","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sanju-thum.jpg" alt="" /> <span>Sanju</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="29"><a href="@Url.Action("Stree","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/stree-thum.jpg" alt="" /> <span>Stree</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevocie-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
         <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
@@ -54,6 +64,7 @@
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("brickex","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/brickex-thum.jpg" alt="" /> <span>Brickex</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("IndiaRF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("Pchf","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pchf-thum.jpg" alt="" /> <span>Piramal Capital Housing Finance</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("piramal-capital","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramal-foundation-thum.jpg" alt="" /> <span>Piramal Foundation</span> </a> </li>
         </ul>
         <ul id="usports" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
@@ -73,7 +84,8 @@
         </ul>*@
         <ul id="yaarii" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
-        </ul>    
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-website","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="" /> <span>Yaarii Website</span> </a> </li>
+        </ul>
         @*<ul id="boutique" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
         </ul>*@
@@ -83,6 +95,10 @@
         <ul id="times-network" class="horizontalScroll">
           <li class="fadeRight t-animated" data-t-show="1"><a href="#" class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
         </ul>*@
+        <ul id="indiabulls" class="horizontalScroll">
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
+         
+        </ul>
     </div>
     <div class="clear"></div>
     <ul class="work-with-clients horizontalScroll">
@@ -92,6 +108,7 @@
         <li class="dubsmash"><a href="#" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
         @*<li class="pedderjohnson"><a href="#" data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>*@
         <li class="yaarii"><a href="#" data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
+        <li class="indiabulls"><a href="#" data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/images/clients/indiabulls.png" alt="" /></a> </li>
 
         <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
