--- a/Sparkt.WebApp/Views/work/PiramalFoundation.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalFoundation.cshtml
@@ -8,26 +8,26 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Piramal Foundation";
     ViewBag.MetaDescription = "Values create value";
-    ViewBag.MetaURL = "https://sparkt.in/work/piramal-capital";
+    ViewBag.MetaURL = "https://sparkt.in/work/piramalfoundation";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
 }
-@section BodyClass {star-plus}
-    <script type="application/ld+json">
-        {
-        "@@context": "https://schema.org",
-        "@@type": "VideoObject",
-        "name": "Kullfi Video",
-        "VideoList": [{
-        "@@type":
-        "@@id": "",
-        "url":"",
-        "description": "Showcasing the essence of the foundation.",
-        "duration": "2M30S",
-        "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/piramal-foundation.jpg",
-        "uploadDate":"06/21/2019",
-        }]
-        }
-    </script>
+@section BodyClass {piramal}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Kullfi Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "",
+    "url":"",
+    "description": "Showcasing the essence of the foundation.",
+    "duration": "2M30S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/piramal-foundation.jpg",
+    "uploadDate":"06/21/2019",
+    }]
+    }
+</script>
 
 <main>
     <div class="section">
@@ -36,7 +36,7 @@
                 <div class="banner-video  middle-align" style="background-image: url(/Content/work/images/banners/piramal-foundation-cover.jpg);">
 
                 </div>
-              
+
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
