--- a/Sparkt.WebApp/Views/work/Sky.cshtml
+++ b/Sparkt.WebApp/Views/work/Sky.cshtml
@@ -12,7 +12,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/Sky";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/sky.jpg";
 }
-@section BodyClass {star-plus}
+@section BodyClass {indiabulls}
     <script type="application/ld+json">
         {
         "@@context": "https://schema.org",
