--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -16,8 +16,8 @@
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
 
 
-            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("KZK","work")" class="hvr-grow-shadow"><img src="~/Content/images/thums/kzk-thum.jpg" alt="" /> <span>Kasauti Zindagi ki</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("KZK-AR","work")" class="hvr-grow-shadow"><img src="~/Content/images/thums/kzk-ar-thum.jpg" alt="" /> <span>Kasauti Zindagi ki AR</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("KZK","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kzk-thum.jpg" alt="" /> <span>Kasauti Zindagi ki</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("KZK-AR","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kzk-ar-thum.jpg" alt="" /> <span>Kasauti Zindagi ki AR</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("kullfimissedcall","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kulfi-missed-call-thum.jpg" alt="" /> <span>Kulfi Missed Call</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("star-plus-brand-refresh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/start-brand-refresh-thum.jpg" alt="" /> <span>Star Brand Refresh</span> </a> </li>
 
@@ -64,7 +64,7 @@
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("brickex","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/brickex-thum.jpg" alt="" /> <span>Brickex</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("IndiaRF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("Pchf","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pchf-thum.jpg" alt="" /> <span>Piramal Capital Housing Finance</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("piramal-capital","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramal-foundation-thum.jpg" alt="" /> <span>Piramal Foundation</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("piramalfoundation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramal-foundation-thum.jpg" alt="" /> <span>Piramal Foundation</span> </a> </li>
         </ul>
         <ul id="usports" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
@@ -108,7 +108,7 @@
         <li class="dubsmash"><a href="#" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
         @*<li class="pedderjohnson"><a href="#" data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>*@
         <li class="yaarii"><a href="#" data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>
-        <li class="indiabulls"><a href="#" data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/images/clients/indiabulls.png" alt="" /></a> </li>
+        <li class="indiabulls"><a href="#" data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
 
         <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
